Added coverage scripts

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test": "jest --watchAll",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
     "storybook": "npm run docs:json && start-storybook -p 6006",
+    "test:coverage": "test-storybook --coverage && npx nyc report --reporter=lcov -t coverage/storybook --report-dir coverage/storybook",
+    "test:coverage:serve": "npx http-server coverage/storybook/lcov-report/ --port 6007",
     "build-storybook": "npm run docs:json && build-storybook",
     "init-msw": "msw init src/"
   },
@@ -42,6 +44,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@babel/core": "^7.18.2",
     "@compodoc/compodoc": "^1.1.19",
+    "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
     "@storybook/addon-actions": "^6.5.6",
     "@storybook/addon-essentials": "^6.5.6",
     "@storybook/addon-interactions": "^6.5.6",
@@ -50,6 +53,7 @@
     "@storybook/builder-webpack5": "^6.5.6",
     "@storybook/jest": "^0.0.10",
     "@storybook/manager-webpack5": "^6.5.6",
+    "@storybook/test-runner": "^0.9.4",
     "@storybook/testing-library": "^0.0.11",
     "@types/jest": "^27.5.2",
     "@types/node": "^12.11.1",
